# camke-tutorial

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
my_tutorial/: .gitignore  CMakeLists.txt  Makefile  config.h.in
my_tutorial/src/: CMakeLists.txt
my_tutorial/src/lib/googletest/gtest/lib/pkgconfig/: gtest_main.pc
my_tutorial/src/utils/: CMakeLists.txt
my_tutorial/tests/: CMakeLists.txt  test_log_manage.cpp  test_sub.cpp
src/: main.c
src/calculate/: CMakeLists.txt
src/lib/googletest/gtest/lib/pkgconfig/: gmock.pc  gtest.pc
src/utils/: CMakeLists.txt
src/utils/log/: log_manage.c  log_manage.cpp  log_manage.h
src/utils/print/: array_print.c  array_print.cpp  array_print.h
tests/: CMakeLists.txt  test_add.cpp  test_log_manage.cpp  test_sub.cpp
tests/lib/gtest/lib/pkgconfig/: gmock_main.pc
